[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Script_Chat.gd" type="Script" id=1]

[node name="ChatRoom" type="Control"]
margin_left = 0.541504
margin_top = 0.467163
margin_right = 40.5415
margin_bottom = 40.4672
script = ExtResource( 1 )

[node name="RoomUI" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.882353 )
margin_left = -492.637
margin_top = 50.0
margin_right = -192.637
margin_bottom = 250.0

[node name="ChatDisplay" type="TextEdit" parent="RoomUI"]
margin_left = 9.99997
margin_top = 9.53784
margin_right = 290.0
margin_bottom = 159.538
focus_mode = 0
readonly = true

[node name="ChatInput" type="LineEdit" parent="RoomUI"]
margin_left = 9.99997
margin_top = 169.538
margin_right = 290.0
margin_bottom = 193.538
focus_mode = 1
focus_mode = 1
placeholder_text = "Your message here..."
[connection signal="focus_entered" from="RoomUI/ChatInput" to="." method="_on_ChatInput_focus_entered"]
[connection signal="focus_exited" from="RoomUI/ChatInput" to="." method="_on_ChatInput_focus_exited"]
[connection signal="text_entered" from="RoomUI/ChatInput" to="." method="_on_ChatInput_text_entered"]
